Further styling added

--- a/css/main.css
+++ b/css/main.css
@@ -93,8 +93,6 @@ html {
 }
 
 body {
-  font-family: "Franklin Gothic Book";
-  font-size: 1em;
   text-align: center;
   color: #fff;
 }
@@ -106,38 +104,54 @@ img {
 
 h1 {
   font-family: "Century Schoolbook";
-  font-size: 4em;
-  text-align: left;
+  font-size: 5em;
+  text-align: center;
 }
 
 h2 {
-  font-family: "Century Schoolbook";
-  font-size: 2em;
-
+  font-family: "Franklin Gothic Demi";
+  font-size: 3em;
+  color: #3a474e;
 }
 
 h3 {
   font-family: "Century Schoolbook";
-  background-color: #3f8c84;
   font-size: 1.75em;
 }
+
+p {
+  font-family: "Franklin Gothic Book";
+  font-size: 1em;
+  text-align: center;
+  color: #fff;
+}
+
 /*------ Base Header Styles-------*/
 
 header {
   display: flex;
   flex-flow: column;
-  background-color: #3f8c84 ;
-  background-size: cover;
+  background-color: #3f8c84;
 }
 
 .header-content-wrapper {
-  background-image: url(../img/code-mountain-color-scheme.png);
-  background-size: cover;
-  background-repeat: round;
+
   padding: 3em;
   display: flex;
   flex-direction: column;
 
+}
+
+button {
+  background-color: #b96852;
+  border-radius: 12px;
+  cursor: pointer;
+  color: #fff;
+  border-color: #fff;
+}
+
+.button:hover {
+  background-color: #FEF4EC;
 }
 
 .intro-flex-container {
@@ -145,13 +159,13 @@ header {
   justify-content: space-evenly;
 }
 
-
-.skills-flex-container {
-  padding: 4em;
-  height: auto;
-  width: auto;
-  display: flex;
-  flex-flow: row wrap;
+.mobile-container {
+  max-width: 480px;
+  margin: auto;
+  background-color: #555;
+  height: 500px;
+  color: white;
+  border-radius: 10px;
 }
 
 .topnav {
@@ -166,7 +180,6 @@ header {
 
 .topnav a {
   float: left;
-  background-color: #b96852;
   padding: 1em;
   text-decoration: none;
   font-size: 1em;
@@ -185,14 +198,17 @@ header {
 /*--aside with skills--*/
 
 #skills {
-  background-color: #408479;
-  margin: 1em;
-  padding: 1em;
   display: flex;
   justify-content: space-evenly;
+  background: #bca162e2;
+  margin: 3em;
+  padding: 1em;
 }
 
-skills-section
+.skills-list {
+  margin: 2em;
+}
+
 /*----project section  ----*/
 
 #projects {
@@ -213,9 +229,15 @@ skills-section
   background: #b96852;
   padding: 2em;
 }
+
 .about {
   background: #3a474e;
   padding: 2em;
+  margin: 3em;
+}
+
+.about p {
+  margin: 7em;
 }
 
 .black {
@@ -225,11 +247,44 @@ skills-section
 
 /*--footer-contact me section--*/
 
+
 .footer-content-wrapper {
-  background: #bca162;
-  padding: 2em;
+  background-image: url(../img/bailey-zindel-nrqv-hbf10m-unsplash.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 40em;
+  padding: 3em;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
+.contact-me {
+  background-color: #b96852be;
+  color: #fff;
+  padding: 5em;
+}
+
+
+footer a {
+  color: #FEF4EC;
+  text-decoration: none;
+  width: 80px;
+  height: 80px;
+  font-size: 2em;
+  font-weight: 900;
+}
+
+footer a:hover {
+  color: #3a474e;
+}
+
+.footnote {
+  background: #3a474ebb;
+  padding: 2em;
+  display: flex;
+  align-self: end;
+}
 
 /*
  * Hide visually and from screen readers
