Additional CSS styling and responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ textarea {
 /* General Styles */
 html {
   font-size: 16px;
+  text-align: center;
 }
 
 body {
@@ -104,24 +105,26 @@ img {
 
 h1 {
   font-family: "Century Schoolbook";
-  font-size: 4em;
+  font-size: 3em;
   text-align: center;
+  text-transform: uppercase;
 }
 
 h2 {
-  font-family: "Century Schoolbook";
-  font-size: 4em;
+  font-family: "Franklin Gothic Book";
+  font-weight: 900;
+  font-size: 2em;
   color: #fff;
 }
 
 h3 {
   font-family: "Century Schoolbook";
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 p {
   font-family: "Franklin Gothic Book";
-  font-size: 1.5em;
+  font-size: 1.25em;
   text-align: center;
   color: #fff;
 }
@@ -160,33 +163,31 @@ header {
 #hero {
   background-image: url(../img/code-mountain-5.png);
   background-size: cover;
-  padding: 12em;
+  overflow: hidden;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
 .hero-content-wrapper {
   background: #d79888c9;
   border: 1px solid #b96852;
   border-radius: 15px;
+  width: 85%;
   display: flex;
-  flex-direction: row wrap;
-  padding-top: 2em;
-  margin: 0, 4em;
+  flex-flow: column;
 }
 
 .half-content {
-  width: 100%;
   display: flex;
   justify-content: center;
 }
 
 .hero-text {
-  text-align: center;
-  width: 76%;
-  padding: 1.5rem;
-  font-family: "Franklin Gothic Demi";
-  letter-spacing: 2px;
   line-height: 1.6em;
+  width: 80%;
 }
+
 
 button {
   background-color: #b96852;
@@ -204,12 +205,8 @@ button {
   background: #707e86;
   display: flex;
   justify-content: space-around;
-  margin: 6em;
+  /*margin: 6em;*/
   padding-top: 1em;
-}
-
-.intro {
-  padding-left: 2em;
 }
 
 .mobile-container {
@@ -258,20 +255,19 @@ button {
   border-radius: 15px;
   margin-top: 6em;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-evenly;
   padding: .5em;
-}
-
-.skill-title {
-  align-items: center;
+  width: 85%;
 }
 
 .skills-list {
   margin: 2em;
+  width: 85%;
 }
 
 p span {
-  font-size: 1.75em;
+  font-size: 1.3em;
   font-weight: 900;
   font-family: "Century Schoolbook";
 }
@@ -298,7 +294,10 @@ p span {
 
 .about-me-content-wrapper {
   background: #b96852;
-  padding: 2em;
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  flex-flow: column wrap;
 }
 
 .about {
@@ -306,8 +305,12 @@ p span {
   padding: 2em;
 }
 
+#text {
+  align-items: center;
+}
+
 .about p {
-  margin: 7em;
+  width: 60%;
 }
 
 
@@ -319,7 +322,7 @@ p span {
   background-size: cover;
   background-repeat: no-repeat;
   height: 40em;
-  padding: 3em;
+  /* padding: 3em;*/
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -329,27 +332,25 @@ p span {
   background-color: #3a474eda;
   border-radius: 15px;
   color: #fff;
-  padding: 5em;
+  padding: 1em;
   margin-top: 2em;
+  width: 30%;
 }
 
 
 footer a {
   color: #FEF4EC;
   text-decoration: none;
-  width: 80px;
-  height: 80px;
-  font-size: 2em;
   font-weight: 900;
 }
 
 footer a:hover {
-  color: #cd9263;
+  color: #f6b39a;
 }
 
 .social-icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .footnote {
@@ -460,21 +461,20 @@ footer a:hover {
     font-size: 1.5em;
   }
 
-  #hero {
-    padding: 8em;
-  }
-
-
-
-  .figure {
-    min-width: 100px;
+  p {
+    font-size: .75em;
   }
 
   .half-content {
     display: flex;
-    flex-flow: column;
+    align-items: center 
   }
+
+  /*---about---*/
+
 }
+
+@media only screen and (min-width: 1200px) {}
 
 @media print,
 (-webkit-min-device-pixel-ratio: 1.25),
