--- a/css/main.css
+++ b/css/main.css
@@ -286,6 +286,23 @@ p span {
   padding: 2em;
 }
 
+.live-version {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
 .project-container {
   background: #3a474e;
   padding: 2em;
@@ -300,28 +317,23 @@ p span {
   background: #707e86;
   color: #fff;
   padding: 2em;
-  display: flex;
-  flex-flow: row wrap;
   border-radius: 15px;
   border: 1px solid #41877a;
 }
 
+
 #about {
   background: #f6b39a;
   padding: 2em;
+  display: flex;
+  flex-flow: row wrap;
 }
-
-.logo {
-  width: 90%;
-}
-
 
 .about-flex-container {
   display: flex;
   flex-flow: row wrap;
   align-items: center;
 }
-
 
 .info {
   color: #fff;
@@ -333,11 +345,11 @@ p span {
   background-image: url(../img/bailey-zindel-nrqv-hbf10m-unsplash.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 60em;
-  /* padding: 3em;*/
+  height: 50em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2em;
 }
 
 #contact {
@@ -345,20 +357,27 @@ p span {
   border-radius: 15px;
   border: 1px solid #f6b39a;
   color: #fff;
-  padding: 2.75em;
-  margin-top: 2em;
-  width: 40%;
+  padding: 1.5em;
+  margin-top: 4em;
+  width: 35%;
+}
+
+/* figure out how to either remove button styling or use the icon as the button*/
+
+#phone {
+  width: 20%;
+  background: none;
+  border: none;
+}
+
+#phone:hover {
+  color: #f6b39a;
 }
 
 .social-icons {
   display: flex;
-  justify-content: space-around;
   flex-flow: row wrap;
-}
-
-/* figure out how to either remove button styling or use the icon as the button*/
-#phone {
-  font-size: 3em;
+  justify-content: space-around;
 }
 
 footer a {
@@ -374,11 +393,12 @@ footer a:hover {
 .size-icon {
   font-size: 3em;
   display: flex;
-  justify-content: space-around;
+  flex-flow: row wrap;
 }
 
 .footnote {
-  padding: 2em;
+  justify-content: center;
+  background-color: #707e86;
 }
 
 .footer-p {
@@ -468,6 +488,15 @@ footer a:hover {
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+@media only screen and (max-width: 767px) {
+  .live-version img {
+    visibility: visible;
+  }
+
+  .responsive-iframe {
+    display: none;
+  }
+}
 
 @media only screen and (min-width: 768px) {
   /* Tablet style adjustments for viewports that meet the condition */
@@ -487,11 +516,19 @@ footer a:hover {
 
 
   /*---about---*/
-
   .about-half-content {
     width: 50%;
   }
 
+  /*---project---*/
+
+  .live-version img {
+    visibility: hidden;
+  }
+
+  .live-version {
+    height: 50em;
+  }
 
 }
 
